# multi-agent-claude-code

./: .dockerignore  .env.example  .env_example  .eslintrc.json  .gitignore  .gitmessage  .issue-126.md  .issue-45.md  .issue-46.md  .issue-48.md  .issue-49.md  .issue-51.md  .issue-52.md  .issue-53.md  .issue-60.md  .issue-64.md  .vercelignore  AGENT-ORCHESTRATION.md  AGENT-OVERVIEW.md  AGENT.md  BRANCH_CLEANUP_REPORT.md  BUILD_INFO.md  CHANGELOG.md  CHECKBOXES.md  CLAUDE.md  CONSTITUTION.md  CUSTOM-MCP-HOSTING.md  FLAGS.md  GEMINI.md  IDEAS-WORKSPACE.md  IDEAS.md  IMPLEMENTATION-CHECKLIST.md  IMPROVEMENTS-FROM-SUPERCLAUDE.md  ISSUE_95_RESPONSE.md  MCP-ARCHITECTURE.md  MCP-SETUP.md  MCP_FIXES_SUMMARY.md  MCP_SERVERS_GUIDE.md  MIGRATION_PLAN.md  MOCK_FIRST_WORKFLOW.md  (+54 more)
.claude/: settings.json  settings.json.backup  settings.local.json.backup  work-journal.json
.github/: AGENT-ASSIGNMENT-RULES.md  AGENT-STATUS.json  COPILOT-WORKFLOW.md  ORCHESTRATION.md  copilot-instructions.md  copilot-workflow.md  labels.yml  pull_request_template.md
.next/: prerender-manifest.json  trace
__tests__/: README.md  TestComponent.test.tsx
agents/: frontend-tester.md  security.md
agentswarm/: README.md  VERSION  __init__.py  agentswarm.sh  install.sh  pytest.ini  requirements.txt
api/: README.md  package-lock.json  package.json  server.js
app/: README.md  package-lock.json  package.json  server.js
automation/: config.yml.template
backend/: health.js  server.js  server.test.js
devops/: README.md  VERSION  deploy-to-template.sh  pyproject.toml  pyproject.toml.template
devops/deploy/: deploy
devops/deploy/commands/: build-production.sh  build.sh  deploy-to-production-simple.sh  deploy-to-production.sh  export-agentswarm.sh  export-package.sh
devops/ops/: ops
devops/ops/commands/: test.sh
devops/ops/commands/testing/: run_tests.py
devops/scripts/: intelligent-auto-deploy.sh
(+658 files in other folders)
